--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@kevinmarrec/nuxt-pwa": "^0.13.0",
     "nuxt": "3.0.0",
     "sass": "^1.56.1",
     "sass-loader": "^10.4.1"
+  },
+  "dependencies": {
+    "firebase": "^9.14.0"
   }
 }
